Included functinos to parse through age data.
Updated test playgrounds to sort through age and race statistics. There seems to be a discrepancy with the numbers in regards to total deaths per state in the race data. Far less numbers being reported there. I will have to try and find a more authoritative source.

--- a/c19-playground.ipynb
+++ b/c19-playground.ipynb
@@ -38,79 +38,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"data/us-city-population-2019-v2.json\") as j:\n",
-    "    jata = json.load(j)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 400,
-   "metadata": {
-    "tags": []
-   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "New York City\n{'total-deaths-by-demo': {'url': 'https://raw.githubusercontent.com/nychealth/coronavirus-data/master/totals/deaths-by-race-age.csv', 'type': 'csv'}, 'total-cases-by-poverty': {'url': 'https://raw.githubusercontent.com/nychealth/coronavirus-data/master/totals/antibody-by-poverty.csv', 'type': 'csv'}, 'deaths_by_conditions': {'url': 'https://raw.githubusercontent.com/nychealth/coronavirus-data/master/totals/deaths-by-underlying-conditions.csv', 'type': 'csv'}, 'latest-summary': {'url': 'https://raw.githubusercontent.com/nychealth/coronavirus-data/master/latest/now-summary.csv', 'type': 'csv'}}\n4\n\n\nChicago\n{'daily-by-demo': {'url': 'https://data.cityofchicago.org/resource/naz8-j4nc.json', 'type': 'json'}}\n1\n\n\n"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "count = 1\n",
-    "for city in jata:\n",
-    "    if \"urls\" in jata[city][\"resources\"]:\n",
-    "        print(jata[city][\"city\"])\n",
-    "        print(jata[city][\"resources\"][\"urls\"])\n",
-    "        print(len(jata[city][\"resources\"][\"urls\"]))\n",
-    "        print(\"\\n\")\n",
-    "    count += 1\n",
-    "    if count == 10:\n",
-    "        break\n",
-    "# for url in jata[\"0\"][\"resources\"][\"urls\"]:\n",
-    "#     print(jata[\"0\"][\"resources\"][\"urls\"][url][\"url\"] + \"\\n\")"
+    "demo_races = [ \"Black\", \"White\", \"Latinx\", \"Asian\", \"Multiracial\", \"Other\" ]\n",
+    "demo_types = [ \"Cases_\", \"Deaths_\"]\n",
+    "\n",
+    "demo_race_cases = []\n",
+    "race_dict = { \"Black\": {\n",
+    "    \"cases\": 0, \n",
+    "    \"deaths\": 0\n",
+    "    } \n",
+    "}\n",
+    "for demo in demo_races:\n",
+    "    for dt in demo_types:\n",
+    "        demo_race_cases.append(dt + demo)\n",
+    "\n",
+    "race_dict[\"Black\"][\"cases\"] = 1\n",
+    "# Cases\n",
+    "# Deaths\n",
+    "print(race_dict[\"Black\"][\"cases\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "str1 = \"Salt Lake City\"\n",
-    "str2 = \"Salt Lake\"\n",
-    "\n",
-    "theurl = \"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_daily_reports/2021-05-30.csv\"\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "tags": []
-   },
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'05-27-2021'"
+       "['Cases_Black',\n",
+       " 'Deaths_Black',\n",
+       " 'Cases_White',\n",
+       " 'Deaths_White',\n",
+       " 'Cases_Latinx',\n",
+       " 'Deaths_Latinx',\n",
+       " 'Cases_Asian',\n",
+       " 'Deaths_Asian',\n",
+       " 'Cases_Multiracial',\n",
+       " 'Deaths_Multiracial',\n",
+       " 'Cases_Other',\n",
+       " 'Deaths_Other']"
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 6
     }
    ],
-   "source": []
+   "source": [
+    "demo_race_cases"
+   ]
   },
   {
    "cell_type": "code",
