New data writer and visualizer
Created an "app_demo_graphs.py" file to create a list of graphs for each state, containing data for age and race demographics.

--- a/c19-playground.ipynb
+++ b/c19-playground.ipynb
@@ -28,76 +28,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import json"
+    "newday = datetime.strftime(today, \"%Y-%m-%d\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1\n"
+      "2021-06-05\n"
      ]
     }
    ],
    "source": [
-    "demo_races = [ \"Black\", \"White\", \"Latinx\", \"Asian\", \"Multiracial\", \"Other\" ]\n",
-    "demo_types = [ \"Cases_\", \"Deaths_\"]\n",
-    "\n",
-    "demo_race_cases = []\n",
-    "race_dict = { \"Black\": {\n",
-    "    \"cases\": 0, \n",
-    "    \"deaths\": 0\n",
-    "    } \n",
-    "}\n",
-    "for demo in demo_races:\n",
-    "    for dt in demo_types:\n",
-    "        demo_race_cases.append(dt + demo)\n",
-    "\n",
-    "race_dict[\"Black\"][\"cases\"] = 1\n",
-    "# Cases\n",
-    "# Deaths\n",
-    "print(race_dict[\"Black\"][\"cases\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['Cases_Black',\n",
-       " 'Deaths_Black',\n",
-       " 'Cases_White',\n",
-       " 'Deaths_White',\n",
-       " 'Cases_Latinx',\n",
-       " 'Deaths_Latinx',\n",
-       " 'Cases_Asian',\n",
-       " 'Deaths_Asian',\n",
-       " 'Cases_Multiracial',\n",
-       " 'Deaths_Multiracial',\n",
-       " 'Cases_Other',\n",
-       " 'Deaths_Other']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "source": [
-    "demo_race_cases"
+    "print(newday)"
    ]
   },
   {
